<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:weightSum="1"
    tools:context=".RandomActivity">

    <FrameLayout
        android:id="@+id/rectangle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.7"
        android:layout_gravity="center"
        android:layout_margin="15dp" >

        <TextView
            android:id="@+id/numberText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            tools:text="999"
            android:textStyle="bold"
            android:textSize="40sp"/>

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:layout_margin="15dp">
        <Button
            android:id="@+id/update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_description"
            android:layout_weight="0.5"
            android:layout_margin="15dp" />

        <Button
            android:id="@+id/crash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next_button_description"
            android:layout_weight="0.5"
            android:layout_margin="15dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        tools:text="user@xyz.com"
        android:gravity="center"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/sign_out"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_out" />

</LinearLayout>